Fixed margin sizing on the window that caused a horizontal scroll on the table

--- a/css/popup.css
+++ b/css/popup.css
@@ -35,7 +35,7 @@ img {
 .description {
     font-size: 3vw;
     text-align: center;
-    padding-bottom: 1vw;
+    padding-bottom: 1vw 0;
 }
 
 .tb th,
